GFORMS-2215: Ensure that the spacing is correct between form title and sign out link (#1908)

--- a/public/stylesheets/gform.css
+++ b/public/stylesheets/gform.css
@@ -423,3 +423,7 @@ div.gform-date-input__item {
 .hmrc-add-to-a-list__identifier p {
     margin: 0px;
 }
+
+.hmrc-header__service-name {
+    margin-right: 5px;
+}
